# XAINIDS

./: .env.dev  .gitignore  main.py  perfect_test.json  pyproject.toml  requirements.txt
.streamlit/: config.toml
cicids/: explainability_metrics_all_models_detailed.csv  models.ipynb  overview.ipynb  preprocess.ipynb
simargl/: explainability_metrics_all_models_detailed.csv  model.ipynb  models.ipynb  overview.ipynb  preprocess.ipynb  test.json
