[project]
name = "xainids"
version = "0.1.0"
description = "XAI-IDS: Towards Proposing an Explainable Artificial Intelligence Framework for Enhancing Network Intrusion Detection Systems"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "lightgbm>=4.6.0",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.3",
    "numpy==2.0",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "streamlit>=1.45.1",
    "tabulate>=0.9.0",
    "tensorflow>=2.18.1",
    "tqdm>=4.67.1",
    "twilio>=9.6.3",
    "xgboost>=3.0.2",
]
